2012-06-19

	* manual/ja/sylpheed.sgml: updated Japanese manual.

2012-06-19

	* src/plugin.c: removed "dereferencing type-punned pointer will break
	  strict-aliasing rules" warnings.

2012-06-19

	* src/filesel.c: removed label warning on non-win32.

2012-06-19

	* libsylph/socket.c: sock_info_connect_by_hostname(): fixed
	  compilation error with --disable-ipv6 (thanks to Jerry Heyman).

2012-06-18

	* version 3.2.0beta9

2012-06-18

	* src/messageview.c: modified the width of tool menu arrow button.

2012-06-18

	* src/summaryview.c: added tooltip for message view toggle arrow.

2012-06-18

	* nsis/update-manager.nsi: prevent 'Sylpheed is running.' message
	  on update.

2012-06-18

	* src/mimeview.c: mimeview_destroy(): fixed a memory leak of a
	  GtkItemFactory.

2012-06-18

	* src/mimeview.[ch]: disabled 'Save all...' menu if attached files
	  with file name do not exist.

2012-06-18

	* src/messageview.c: added attached filenames to the tool menu.

2012-06-15

	* src/messageview.[ch]: changed the Text/Attachments tab to a toggle
	  button, and moved it to the right edge of the header pane.
	  Added tool menu arrow button and 'Save all' menu.

2012-06-13

	* src/compose.c: compose_attach_property(): force focus for compose
	  window (will fix #70).

2012-06-13

	* src/inc.c: included server name in the error dialog.
	* src/progressdialog.c: adjusted the column width.

2012-06-12

	* src/filesel.c: win32: handle multiple file selection with shortcuts.
	  Follow folder link on save mode.

2012-06-11

	* src/filesel.c: win32: follow Windows shortcut (.lnk).

2012-06-06

	* version 3.2.0beta8

2012-06-06

	* src/inc.c: properly detect DNS lookup error when
	  session_connect_full() failed immediately.

2012-05-31

	* libsylph/session.[ch]
	  libsylph/socket.[ch]
	  src/inc.[ch]
	  src/send_message.c: differentiate DNS lookup error from connection
	  errors.
	* libsylph/imap.c
	  libsylph/nntp.c: fixed resource leak on SOCKS connection failure.

2012-05-30
