@@ -1,5 +1,10 @@
 2012-06-19
 
+	* libsylph/prefs_common.c: win32: changed the default of junk
+	  commands with sylfilter.
+
+2012-06-19
+
 	* manual/ja/sylpheed.sgml: updated Japanese manual.
 
 2012-06-19
